--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,93 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&display=swap');
+
+html, body{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #E7BB41;
+    font-weight: bold;
+    font-family: Alkatra;
+}
+
+.wrapper {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .game {
+    flex-grow: 1;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.scoreboard {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.score {
+    display: flex;
+}
+
+.player-choice {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.computer-choice {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player-choice > * {
+    padding: 30px;
+}
+
+.computer-choice > * {
+    padding: 20px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.choice-title {
+    text-align: center;
+}
+
+.player-choice > .img-container > img{
+    max-width: 30%;
+    height: auto;
+}
+
+img {
+    max-width: 70%;
+    height: auto;
+}
+.title{
+    text-align: center;
+}
+
+.computer-choice >.img-container {
+    display: flex;
+    justify-content: center;
+    
 }
